# FacialEmotionPredictor

./: CMakeLists.txt  README.md
src/: ImageProcessor.h  main.cpp  modelLoader.cpp  modelLoader.h
